@@ -31,6 +31,7 @@ num_cpus = "1.13.0"
 which = { version = "7.0.2", optional = true }
 rcue = { version = "0.1.3", optional = true }
 hhmmss = { version = "0.1.0", optional = true }
+ctrlc = "3.4"
 
 [features]
 libav = ["bliss-audio/ffmpeg"]
